diesel_compile_tests/tests/fail/custom_returning_requires_nonaggregate.stderr
error[E0277]: the trait bound `diesel::expression::is_aggregate::Yes: MixedAggregates<diesel::expression::is_aggregate::No>` is not satisfied
  --> tests/fail/custom_returning_requires_nonaggregate.rs:22:78
   |
22 |     let stmt = update(users.filter(id.eq(1))).set(name.eq("Bill")).returning(count(id));
   |                                                                    --------- ^^^^^^^^^ the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
   |                                                                    |
   |                                                                    required by a bound introduced by this call
   |
   = help: the following other types implement trait `MixedAggregates<Other>`:
             <diesel::expression::is_aggregate::Yes as MixedAggregates<diesel::expression::is_aggregate::Never>>
             <diesel::expression::is_aggregate::Yes as MixedAggregates<diesel::expression::is_aggregate::Yes>>
   = note: required for `UpdateStatement<table, WhereClause<Grouped<Eq<id, Bound<Integer, i32>>>>, Assign<..., ...>, ...>` to implement `Query`
note: required by a bound in `UpdateStatement::<T, U, V>::returning`
  --> $DIESEL/src/query_builder/update_statement/mod.rs
   |
   |         UpdateStatement<T, U, V, ReturningClause<E>>: Query,
   |                                                       ^^^^^ required by this bound in `UpdateStatement::<T, U, V>::returning`

error[E0277]: the trait bound `diesel::expression::is_aggregate::No: MixedAggregates<diesel::expression::is_aggregate::Yes>` is not satisfied
  --> tests/fail/custom_returning_requires_nonaggregate.rs:27:63
   |
27 |     let stmt = insert_into(users).values(&new_user).returning((name, count(name)));
   |                                                     --------- ^^^^^^^^^^^^^^^^^^^ the trait `MixedAggregates<diesel::expression::is_aggregate::Yes>` is not implemented for `diesel::expression::is_aggregate::No`
   |                                                     |
   |                                                     required by a bound introduced by this call
   |
   = help: the following other types implement trait `MixedAggregates<Other>`:
             <diesel::expression::is_aggregate::No as MixedAggregates<diesel::expression::is_aggregate::Never>>
             <diesel::expression::is_aggregate::No as MixedAggregates<diesel::expression::is_aggregate::No>>
   = note: required for `(columns::name, diesel::expression::count::count::count<diesel::sql_types::Text, columns::name>)` to implement `ValidGrouping<()>`
   = note: required for `(columns::name, diesel::expression::count::count::count<diesel::sql_types::Text, columns::name>)` to implement `NonAggregate`
   = note: required for `InsertStatement<table, ValuesClause<(DefaultableColumnInsertValue<...>,), ...>, ..., ...>` to implement `Query`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
  --> $DIESEL/src/query_builder/insert_statement/mod.rs
   |
   |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
   |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`
